--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,6 +44,12 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+# Redis
+redis.host="localhost"
+redis.port=6379
+redis.timeout=2000
+
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
